--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
       var color = prompt("Qual'è il tuo colore preferito?");
       console.log(name, surname, color);
 
-      document.getElementById('favoriteColor').innerHTML = name+surname+color+19;
+      var res = name + surname + color + 19;
+
+      document.getElementById('favoriteColor').innerHTML = res;
     </script>
   </body>
 </html>
